Tweet  fetching working

--- a/tweet_hunter/styles/Home.module.css
+++ b/tweet_hunter/styles/Home.module.css
@@ -119,3 +119,11 @@
     flex-direction: column;
   }
 }
+
+.InputContainer{
+  display: flex;
+  align-items: center
+}
+.InputLabel{
+  margin-right: 0.5vw;
+}
