--- a/tweet_hunter/styles/Home.module.css
+++ b/tweet_hunter/styles/Home.module.css
@@ -3,8 +3,8 @@
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  padding-top: 20%;
 }
 
 .main {
