--- a/tweet_hunter/styles/Index.module.css
+++ b/tweet_hunter/styles/Index.module.css
@@ -7,31 +7,6 @@
   padding-top: 20%;
 }
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
 .title a {
   color: #0070f3;
   text-decoration: none;
@@ -46,7 +21,9 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  margin-bottom: 2vh; 
+  font-weight: bold; 
+  font-size: 4vh;
 }
 
 .title,
@@ -57,15 +34,6 @@
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
@@ -97,14 +65,28 @@
   border-color: #1DA1F2;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+
+
+.inputContainer{
+  display: flex;
+  align-items: center;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.sliderContainer{
+  display: flex;
+  align-items: center;
+}
+
+.inputLabel{
+  margin-top: 2vw;
+}
+
+.sliderLabel{
+  margin-left: 1vw;
+}
+
+.checkboxContainer{
+  margin-top: 1vw;
 }
 
 @media (max-width: 600px) {
@@ -112,12 +94,21 @@
     width: 100%;
     flex-direction: column;
   }
+  .inputContainer{
+    width: 80%;
+  }
+  
+  .sliderContainer{
+    width: 80%;
+  }
 }
 
-.InputContainer{
-  display: flex;
-  align-items: center
-}
-.InputLabel{
-  margin-right: 0.5vw;
+@media (min-width: 601px) {
+  .inputContainer{
+    width: 30%;
+  }
+  
+  .sliderContainer{
+    width: 30%;
+  }
 }
